--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Bram Geron <bram@bram.xyz>"]
 description = "Big integer types that have a small on-stack representation for small values. Uses num-bigint internally."
 edition = "2018"
 license = "MIT OR Apache-2.0"
+repository = "https://github.com/rusty-plasma/smallbigint"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
