--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,11 +10,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: cargo build --all-targets --all-features
+      run: cargo build --all-targets
     - name: Run tests
-      run: cargo test --all-targets --all-features
+      run: cargo test --all-targets
     - name: Clippy
-      run: cargo clippy --all-targets --all-features -- -D warnings -D clippy::all -D clippy::cargo
+      run: cargo clippy --all-targets -- -D warnings -D clippy::all -D clippy::cargo
     - name: Check for correct formatting
       run: cargo fmt -- --check --files-with-diff
     - name: Cargo audit
