--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ num-bigint = "0.2.6"
 num-traits = "0.2.11"
 either = "1.5.3"
 num-integer = "0.1.42"
+cfg-if = "0.1.10"
 
 [dev-dependencies]
 num-iter = "0.1.40"
@@ -25,8 +26,14 @@ structopt = "0.3.12"
 anyhow = "1.0.35"
 
 [features]
+
+default = ["unsafe-opt"]
+
 # Enable this feature to be able to run the benchmark tests.
 # This flag might go away in the near future when benchmarks
 # are available on cargo stable.
 bench = []
 benchall = []
+
+# An optimization that's unsafe
+unsafe-opt = []
