--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,9 +21,8 @@ num-integer = "0.1.42"
 
 [dev-dependencies]
 num-iter = "0.1.40"
-failure = "0.1.7"
-exitfailure = "0.5.1"
 structopt = "0.3.12"
+anyhow = "1.0.35"
 
 [features]
 # Enable this feature to be able to run the benchmark tests.
